[project]
name = "video-downloader"
version = "0.1.0"
description = "Download highest quality videos from a list of URLs"
authors = [{ name = "Your Name", email = "your@email.com" }]
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2025.2.19"
]

[tool.uv]  # optional but supported if uv adds features later
