[project]
name = "video-downloader"
version = "0.1.0"
description = "Download highest quality videos from a list of URLs"
authors = [{ name = "adrian w", email = "ajwride@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2025.2.19"
]

[project.scripts]
video-downloader = "video_downloader.__main__:main"

[tool.uv]  # optional but supported if uv adds features later
